# kxr_model_zoo

./: .gitignore  README.md
camera_modules/pitch_yaw_2axis_camera_module/: CMakeLists.txt  package.xml
camera_modules/pitch_yaw_2axis_camera_module/config/: servo_config.yaml
camera_modules/pitch_yaw_2axis_camera_module/launch/: controller.launch
camera_modules/pitch_yaw_2axis_camera_module/meshes/: base_link.dae  pitch_link.dae
camera_modules/pitch_yaw_2axis_camera_module/urdf/: pitch_yaw_2axis_camera_module.urdf
kxrmamoru_2022/: CMakeLists.txt  package.xml
kxrmamoru_2022/config/: diff_drive_controller.yaml  dualshock3_teleop_twist_joy.yaml  kxrmamoru_2022_servo_config.yaml
kxrmamoru_2022/launch/: joy.launch  kxr_controller.launch
kxrmamoru_2022/meshes/: HEAD_LINK0_mesh.dae  HEAD_LINK1_mesh.dae  HEAD_LINK2_mesh.dae  HEAD_LINK3_mesh.dae  HEAD_LINK4_mesh.dae  LARM_LINK0_mesh.dae  LARM_LINK1_mesh.dae  LARM_LINK2_mesh.dae  LARM_LINK3_mesh.dae  LARM_LINK4_mesh.dae  LARM_LINK5_mesh.dae  LLEG_LINK0_mesh.dae  LLEG_LINK1_mesh.dae  LLEG_LINK2_mesh.dae  RARM_LINK0_mesh.dae  RARM_LINK1_mesh.dae  RARM_LINK2_mesh.dae  RARM_LINK3_mesh.dae  RARM_LINK4_mesh.dae  RARM_LINK5_mesh.dae  RLEG_LINK0_mesh.dae  RLEG_LINK1_mesh.dae  RLEG_LINK2_mesh.dae  torso-link-l4m3_mesh.dae
kxrmamoru_2022/urdf/: kxrmamoru_2022.urdf
yamaguchi_7axis_arm_short/: CMakeLists.txt  package.xml
yamaguchi_7axis_arm_short/config/: joint_names_yamaguchi_7axis_arm_short.yaml  servo_config.yaml  yamaguchi_7axis_arm_short.yaml
yamaguchi_7axis_arm_short/euslisp/: yamaguchi_7axis_arm_short-interface.l
yamaguchi_7axis_arm_short/launch/: controller.launch  display.launch  gazebo.launch
yamaguchi_7axis_arm_short/meshes/: gripper_link1.STL  gripper_link2.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL  link7.STL
yamaguchi_7axis_arm_short/urdf/: yamaguchi_7axis_arm_short.urdf
