<package format="2">
  <name>kxrmamoru_2022</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for kxrmamoru_2022</p>
  </description>
  <author>IORI YANOKURA</author>
  <maintainer email="yanokura@jsk.imi.i.u-tokyo.ac.jp" />
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>kxr_controller</depend>

  <export>
    <architecture_independent />
  </export>
</package>
